maybe admin page

--- a/src/translations/english.json
+++ b/src/translations/english.json
@@ -6,6 +6,7 @@
   "Contact": "Contact",
   "en": "English",
   "fr": "French",
+  "vi": "Vietnamese",
   "Call Us": "Call Us",
   "Free delivery on order over": "Free delivery on order over",
   "Featured Products": "Featured Products",
